12_Gateway_API/01_gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: example-class
spec:
    controllerName: example.com/gateway-controller
