12_Gateway_API/02_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: example-gateway
spec:
    gatewayClassName: example-class
    listeners:
        - name: http
          protocol: HTTP
          port: 80
