12_Gateway_API/03_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: example-httproute
spec:
    parentRefs:
        - name: example-gateway
    hostnames:
        - "www.example.com"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /login
          backendRefs:
              - name: example-svc
                port: 8080
